--- a/template/pom.xml
+++ b/template/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>template</artifactId>
     <packaging>pom</packaging>
     <version>1.0.1</version>
+    <modules>
+        <module>freemarkerUtil</module>
+    </modules>
 
 
 </project>
